samples/_failures_safe/1761647185_d556e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3efac2af.c: In function ‘main’:
./samples/SAFE/__tmp_3efac2af.c:151:24: error: expected ‘)’ at end of input
  151 |     if (matrix_multiply
      |        ~               ^
      |                        )
./samples/SAFE/__tmp_3efac2af.c:151:5: error: expected declaration or statement at end of input
  151 |     if (matrix_multiply
      |     ^~
